Chaincode Testcases, Modification in Node API Call

--- a/caliper/caliper-benchmarks-local/report.html
+++ b/caliper/caliper-benchmarks-local/report.html
@@ -158,10 +158,10 @@
                     </tr>
 
                     <tr>
-                         <td>Create Car</td> <td>0</td> <td>20</td> <td>-7.5</td> <td>0.00</td> <td>9007199254740.99</td> <td>-</td> <td>74.6</td>
+                         <td>Create Car</td> <td>20</td> <td>0</td> <td>-47.3</td> <td>1.03</td> <td>0.57</td> <td>0.73</td> <td>104.2</td>
                     </tr>
                     <tr>
-                         <td>Query Car</td> <td>10</td> <td>10</td> <td>-21.3</td> <td>1.46</td> <td>1.22</td> <td>1.34</td> <td>208.3</td>
+                         <td>Query Car</td> <td>20</td> <td>0</td> <td>65.8</td> <td>0.18</td> <td>0.02</td> <td>0.07</td> <td>61.3</td>
                     </tr>
                 </table>
             </div>
@@ -179,7 +179,7 @@
                                      <th>Name</th> <th>Succ</th> <th>Fail</th> <th>Send Rate (TPS)</th> <th>Max Latency (s)</th> <th>Min Latency (s)</th> <th>Avg Latency (s)</th> <th>Throughput (TPS)</th>
                                 </tr>
                                 <tr>
-                                     <td>Create Car</td> <td>0</td> <td>20</td> <td>-7.5</td> <td>0.00</td> <td>9007199254740.99</td> <td>-</td> <td>74.6</td>
+                                     <td>Create Car</td> <td>20</td> <td>0</td> <td>-47.3</td> <td>1.03</td> <td>0.57</td> <td>0.73</td> <td>104.2</td>
                                 </tr>
                             </table>
                         <h3>Resource utilization for Create Car</h3>
@@ -199,7 +199,7 @@
                                      <th>Name</th> <th>Succ</th> <th>Fail</th> <th>Send Rate (TPS)</th> <th>Max Latency (s)</th> <th>Min Latency (s)</th> <th>Avg Latency (s)</th> <th>Throughput (TPS)</th>
                                 </tr>
                                 <tr>
-                                     <td>Query Car</td> <td>10</td> <td>10</td> <td>-21.3</td> <td>1.46</td> <td>1.22</td> <td>1.34</td> <td>208.3</td>
+                                     <td>Query Car</td> <td>20</td> <td>0</td> <td>65.8</td> <td>0.18</td> <td>0.02</td> <td>0.07</td> <td>61.3</td>
                                 </tr>
                             </table>
                         <h3>Resource utilization for Query Car</h3>
